Update and rename testpost.md to 2025-06-18-testpost.md

--- a/_posts/2025-06-18-testpost.md
+++ b/_posts/2025-06-18-testpost.md
@@ -1,7 +1,7 @@
 ---
 title: 'Test Blog Post'
 date: 2025-06-18
-permalink: /posts/testpost/
+permalink: /posts/2025/06/testpost/
 tags:
   - cool posts
   - category1
